--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategory.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategory.html.twig
@@ -3,7 +3,24 @@
 
 {% block title %}Categorie{% endblock %}
 
+{% block pagetitle %}
+    <div class="row wrapper border-bottom white-bg page-heading">
+        <div class="col-sm-4">
+            <h2>Lista Categorie</h2>
+            <ol class="breadcrumb">
+                <li>
+                    <a href="/">Dashboard</a>
+                </li>
+                <li class="active">
+                    <strong>Categorie</strong>
+                </li>
+            </ol>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
+
 <div class="ibox float-e-margins">
     <div class="ibox-title">
         <h5>Categorie</h5>
