--- a/catalogo_esistente/app/Resources/views/layout.html.twig
+++ b/catalogo_esistente/app/Resources/views/layout.html.twig
@@ -26,6 +26,8 @@
         
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     {#<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/dropzone.css" />#}
+
+    {% block stylesheets %}{% endblock %}
     
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -83,38 +85,38 @@
         </nav>
 
         <div id="page-wrapper" class="gray-bg dashbard-1">
-        <div class="row border-bottom">
-            <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
-                <div class="navbar-header">
-                    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
-                    {#<form role="search" class="navbar-form-custom" action="search_results.html">
-                        <div class="form-group">
-                            <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
-                        </div>
-                    </form>#}
-                </div>
-                <ul class="nav navbar-top-links navbar-right">
-                    <li>
-                        <a href="/logout">
-                            <i class="fa fa-sign-out"></i> Log out
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
-        {% block pagetitle %}
-            {#{{ app.request.attributes.get('_route') }}#}
-        {% endblock %}
-        
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="wrapper wrapper-content">
-                    {% block content %}
-                        
-                    {% endblock %}
+            <div class="row border-bottom">
+                <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
+                    <div class="navbar-header">
+                        <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
+                        {#<form role="search" class="navbar-form-custom" action="search_results.html">
+                            <div class="form-group">
+                                <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
+                            </div>
+                        </form>#}
                     </div>
-                    {% block footer %}
+                    <ul class="nav navbar-top-links navbar-right">
+                        <li>
+                            <a href="/logout">
+                                <i class="fa fa-sign-out"></i> Log out
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            {% block pagetitle %}
+                {#{{ app.request.attributes.get('_route') }}#}
+            {% endblock %}
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="wrapper wrapper-content">
+                        {% block content %}
+
+                        {% endblock %}
+                    </div>
+                        {% block footer %}
                     <div class="footer">
                         <div class="pull-right">
                             <a href="http://www-qweb.eu">Credits</a>
@@ -123,10 +125,10 @@
                             <strong>Copyright</strong> Qwebsrl &copy; 2014-2015
                         </div>
                     </div>
-                    {% endblock %}
+                        {% endblock %}
+                    </div>
                 </div>
             </div>
-        </div>
     </div>
     <!-- Mainly scripts -->
     <script src="{{ asset('admin-style/js/jquery-2.1.1.js') }}"></script>
