--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -13,11 +13,21 @@
         <div class="col-lg-12">
             <div class="tabs-container">
                 <ul class="nav nav-tabs">
+                    {% if id_album > 0 %}
+                    <li class=""><a data-toggle="tab" href="#tab-1"> Informazioni Prodotto</a></li>
+                    <li class="active"><a data-toggle="tab" href="#tab-2">Info Aggiuntive</a></li>
+                    {% else %}
                     <li class="active"><a data-toggle="tab" href="#tab-1"> Informazioni Prodotto</a></li>
-                    <li class=""><a data-toggle="tab" href="#tab-2">Info Aggiuntive</a></li>
+                    <li class="disabled"><a>Immagini</a></li>
+                    {% endif %}
+
                 </ul>
                 <div class="tab-content">
+                    {% if id_album > 0 %}
+                    <div id="tab-1" class="tab-pane">
+                    {% else %}
                     <div id="tab-1" class="tab-pane active">
+                    {% endif %}
                         <div class="panel-body">
 
                             <div class="col-md-6">
@@ -86,7 +96,12 @@
                             </div>
                         </div>
                     </div>
+
+                    {% if id_album > 0 %}
+                    <div id="tab-2" class="tab-pane active">
+                    {% else %}
                     <div id="tab-2" class="tab-pane">
+                    {% endif %}
                         <div class="panel-body">
                             <div class="ibox float-e-margins">
                                 <div class="ibox-title">
