Terminate CRUD di Categorie, Feature, FeatureValues.

--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Feature/update.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Feature/update.html.twig
@@ -2,12 +2,12 @@
 {% extends 'layout.html.twig' %}
 {% block stylesheets %}{% endblock %}
 
-{% block title %}Crea Nuova Feature{% endblock %}
+{% block title %}Modifica {{ feature.title }}{% endblock %}
 
 {% block pagetitle %}
     <div class="row wrapper border-bottom white-bg page-heading">
         <div class="col-sm-4">
-            <h2>Crea Nuova Feature</h2>
+            <h2>Modifica Feature "{{ feature.title }}"</h2>
             <ol class="breadcrumb">
                 <li>
                     <a href="/">Dashboard</a>
@@ -16,7 +16,7 @@
                     <a href="/features">Features</a>
                 </li>
                 <li class="active">
-                    <strong>Nuova Feature</strong>
+                    <strong>Modifica Feature</strong>
                 </li>
             </ol>
         </div>
@@ -86,7 +86,6 @@
         </div>
         {{ form_end(form) }}
     </div>
-</div>
 {% endblock %}
 
 {% block javascripts %}
