--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/index.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/index.html.twig
@@ -99,6 +99,7 @@
                             </td>
                             <td>
                                 <a href="/category/update/{{category.idTblCatalogueCategory}}" title="Modifica"><i class="fa fa-edit"></i></a>
+                                <a href="/category/delete/{{category.idTblCatalogueCategory}}" title="Elimina"><i class="fa fa-times"></i></a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -149,6 +150,7 @@
                             </td>
                             <td>
                                 <a href="/product/update/{{product.idTblCatalogueProduct}}" title="Modifica"><i class="fa fa-edit"></i></a>
+                                <a href="/product/delete/{{product.idTblCatalogueProduct}}" title="Elimina"><i class="fa fa-times"></i></a>
                             </td>
                         </tr>
                     {% endfor %}
