--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeatures.html.twig
@@ -3,6 +3,10 @@
 
 {% block title %}Caratteristiche{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('admin-style/css/plugins/sweetalert/sweetalert.css') }}"/>
+{% endblock %}
+
 {% block pagetitle %}
     <div class="row wrapper border-bottom white-bg page-heading">
         <div class="col-sm-4">
@@ -64,6 +68,7 @@
                         </td>
                         <td>
                             <a href="/feature/update/{{feature.idTblCatalogueFeature}}" title="Modifica"><i class="fa fa-edit"></i></a>
+                            <a href="/feature/delete/{{feature.idTblCatalogueFeature}}" title="Elimina"><i class="fa fa-times"></i></a>
                         </td>
                     </tr>
                     {% endfor %}
@@ -72,4 +77,23 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block javascripts %}
+
+    <!-- SWEET ALERT -->
+    <script src="{{ asset('admin-style/js/plugins/sweetalert/sweetalert.min.js') }}"></script>
+
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        <script>
+            $(document).ready(function(){
+                swal({
+                    title: "Cancellata!",
+                    text: "{{ flashMessage }}",
+                    type: "success"
+                });
+            });
+        </script>
+    {% endfor %}
+
 {% endblock %}
