--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeaturevalues.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeaturevalues.html.twig
@@ -3,6 +3,10 @@
 
 {% block title %}Featurevalues{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('admin-style/css/plugins/sweetalert/sweetalert.css') }}"/>
+{% endblock %}
+
 {% block pagetitle %}
     <div class="row wrapper border-bottom white-bg page-heading">
         <div class="col-sm-4">
@@ -62,9 +66,10 @@
                         <td>
                             {{featurevalue.img}}
                         </td>
-                        {#<td>
-                            <a href="/product/update/{{product.idTblCatalogueProduct}}" title="Modifica"><i class="fa fa-edit"></i></a>
-                        </td>#}
+                        <td>
+                            <a href="/featurevalues/update/{{featurevalue.idTblCatalogueFeaturevalue}}" title="Modifica"><i class="fa fa-edit"></i></a>
+                            <a href="/featurevalues/delete/{{featurevalue.idTblCatalogueFeaturevalue}}" title="Elimina"><i class="fa fa-times"></i></a>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -72,5 +77,24 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block javascripts %}
+
+    <!-- SWEET ALERT -->
+    <script src="{{ asset('admin-style/js/plugins/sweetalert/sweetalert.min.js') }}"></script>
+
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        <script>
+            $(document).ready(function(){
+                swal({
+                    title: "Cancellata!",
+                    text: "{{ flashMessage }}",
+                    type: "success"
+                });
+            });
+        </script>
+    {% endfor %}
+
 {% endblock %}
 
