--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
@@ -1,20 +1,88 @@
 {# src/Acme/DemoBundle/Resources/views/Random/index.html.twig #}
-{% extends '::base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block title %}Inserisci nuova categoria{% endblock %}
+{% block title %}Crea Nuova Categoria{% endblock %}
 
-{% block stylesheets %}
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">    
+{% block pagetitle %}
+    <div class="row wrapper border-bottom white-bg page-heading">
+        <div class="col-sm-4">
+            <h2>Crea Nuova Categoria</h2>
+            <ol class="breadcrumb">
+                <li>
+                    <a href="/">Dashboard</a>
+                </li>
+                <li>
+                    <a href="/categories">Categorie</a>
+                </li>
+                <li class="active">
+                    <strong>Nuova Categoria</strong>
+                </li>
+            </ol>
+        </div>
+    </div>
 {% endblock %}
 
-{% block body %}
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <input type="submit" value="Salva">
-    {{ form_end(form) }}
+{% block content %}
+
+
+<div class="row">
+
+    <div class="col-lg-12">
+        {{ form_start(form) }}
+        <div class="tabs-container">
+            <ul class="nav nav-tabs">
+                <li class="active"><a data-toggle="tab" href="#tab-1"> Informazioni Categoria</a></li>
+            </ul>
+            <div class="tab-content">
+
+                    <div id="tab-1" class="tab-pane active">
+                        <div class="panel-body">
+
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    {{ form_label(form.title, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.title) }}
+                                    {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form_label(form.description, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.description) }}
+                                    {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form_label(form.pub, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_errors(form.pub) }}
+                                    <div class="checkbox">
+                                        <label>
+                                            {{ form_widget(form.pub) }}
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    {{ form_errors(form.categoriesParent) }}
+                                    {{ form_label(form.categoriesParent, label|default(null) ,{'label_attr': {'class': ''}}) }}
+                                    {{ form_widget(form.categoriesParent, {'attr': {'class': 'col-lg-12', 'multiple':'true'}}) }}
+                                </div>
+
+                            </div>
+
+                            <div class="col-md-12">
+                                {{ form_label(form.save, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
+                                {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+        {{ form_end(form) }}
+    </div>
+
+
 {% endblock %}
+
 
 {% block javascripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>    
+
 {% endblock %}
