--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Featurevalue/update.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Featurevalue/update.html.twig
@@ -2,21 +2,21 @@
 {% extends 'layout.html.twig' %}
 {% block stylesheets %}{% endblock %}
 
-{% block title %}Crea Nuova Feature{% endblock %}
+{% block title %}Modifica "{{ featurevalue.title }}"{% endblock %}
 
 {% block pagetitle %}
     <div class="row wrapper border-bottom white-bg page-heading">
-        <div class="col-sm-4">
-            <h2>Crea Nuova Feature</h2>
+        <div class="col-sm-12">
+            <h2>Modifica Featurevalues "{{ featurevalue.title }}"</h2>
             <ol class="breadcrumb">
                 <li>
                     <a href="/">Dashboard</a>
                 </li>
                 <li>
-                    <a href="/features">Features</a>
+                    <a href="/features">Featurevalues</a>
                 </li>
                 <li class="active">
-                    <strong>Nuova Feature</strong>
+                    <strong>Nuova Featurevalues</strong>
                 </li>
             </ol>
         </div>
@@ -30,7 +30,7 @@
         {{ form_start(form) }}
         <div class="tabs-container">
             <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#tab-1"> Informazioni Feature</a></li>
+                <li class="active"><a data-toggle="tab" href="#tab-1"> Informazioni Featurevalues</a></li>
             </ul>
             <div class="tab-content">
 
@@ -44,24 +44,19 @@
                                 {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
                             </div>
                             <div class="form-group">
-                                {{ form_label(form.description, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
-                                {{ form_errors(form.description) }}
-                                {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_label(form.img, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                {{ form_errors(form.img) }}
+                                {{ form_widget(form.img, {'attr': {'class': 'form-control'}}) }}
                             </div>
                             <div class="form-group">
-                                {{ form_label(form.typeInput, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
-                                {{ form_errors(form.typeInput) }}
-                                {{ form_widget(form.typeInput, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_label(form.link, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                {{ form_errors(form.link) }}
+                                {{ form_widget(form.link, {'attr': {'class': 'form-control'}}) }}
                             </div>
                             <div class="form-group">
-                                {{ form_label(form.compulsory, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
-                                {{ form_errors(form.compulsory) }}
-                                {{ form_widget(form.compulsory, {'attr': {'class': 'form-control'}}) }}
-                            </div>
-                            <div class="form-group">
-                                {{ form_label(form.display, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
-                                {{ form_errors(form.display) }}
-                                {{ form_widget(form.display, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_label(form.link2, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                {{ form_errors(form.link2) }}
+                                {{ form_widget(form.link2, {'attr': {'class': 'form-control'}}) }}
                             </div>
                             {#
                             <div class="form-group">
@@ -74,6 +69,14 @@
                                 </div>
                             </div>
                             #}
+                        </div>
+
+                        <div class="col-md-6">
+                            {{ form_label(form.features, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
+                            {{ form_errors(form.features) }}
+                            <div class="col-lg-12 m-l-n">
+                                {{ form_widget(form.features, {'attr': {'class': 'form-control', 'multiple':'true'}}) }}
+                            </div>
                         </div>
 
                         <div class="col-md-12">
