--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -26,8 +26,8 @@
         <div class="col-lg-12">
             <div class="tabs-container">
                 <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#tab-1"> Informazioni Prodotto</a></li>
-                    <li class=""><a data-toggle="tab" href="#tab-4"> Images</a></li>
+                    <li class="active"><a data-toggle="tab" href="#tab-1">Informazioni Prodotto</a></li>
+                    <li class=""><a data-toggle="tab" href="#tab-4">Images</a></li>
                 </ul>
                 <div class="tab-content">
 
@@ -42,23 +42,17 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    {{ form_label(form.description, label|default(null) ,{'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-                                    {{ form_errors(form.description) }}
-                                    <div class="col-sm-10">
-                                        {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
-                                        <div class="summernote">
-                                            {{ product.description }}
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
                                     {{ form_label(form.shortDescription, label|default(null) ,{'label_attr': {'class': 'col-sm-2 control-label'}}) }}
                                     {{ form_errors(form.shortDescription) }}
                                     <div class="col-sm-10">
                                         {{ form_widget(form.shortDescription, {'attr': {'class': 'form-control'}}) }}
-                                        <div class="summernote">
-                                            {{ product.shortDescription }}
-                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    {{ form_label(form.description, label|default(null) ,{'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+                                    {{ form_errors(form.description) }}
+                                    <div class="col-sm-10">
+                                        {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -128,7 +122,21 @@
                                     </tr>
                                     </thead>
                                     <tbody>
+                                    {% for immagine in immagini %}
+                                        <tr>
+                                            <td>
+                                                <img src="{{ asset(immagine.img) }}" class="img-responsive" />
+                                            </td>
+                                            <td>
+                                                {{ immagine.img }}
+                                            </td>
+                                            <td>
+                                                {{ immagine.posizione }}
+                                            </td>
+                                            <td></td>
 
+                                        </tr>
+                                    {% endfor %}
                                     </tbody>
                                 </table>
                             </div>
@@ -154,14 +162,10 @@
     <script>
         $(document).ready(function(){
 
-            $('.summernote').summernote();
-
-            $('.input-group.date').datepicker({
-                todayBtn: "linked",
-                keyboardNavigation: false,
-                forceParse: false,
-                calendarWeeks: true,
-                autoclose: true
+            $('.summernote').summernote({
+                onkeyup: function(e) {
+                    $("#product_edit_description").val($(".summernote").code());
+                }
             });
 
         });
