Migrazione DB, aggiornamento viste, aggiornamento form, inserimento paginazione lato client e lato server.

--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -141,7 +141,7 @@
 
                 url: "{{ oneup_uploader_endpoint('gallery') }}",
                 autoProcessQueue: false,
-                uploadMultiple: true,
+                //uploadMultiple: true,
                 parallelUploads: 10,
                 maxFiles: 100,
                 addRemoveLinks: true,
