--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeaturevalues.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallfeaturevalues.html.twig
@@ -26,7 +26,7 @@
 {% block content %}
 <div class="ibox float-e-margins">
     <div class="ibox-title">
-        <h5>Prodotti</h5>
+        <h5>Featurevalues</h5>
         <div class="ibox-tools">
             <a class="collapse-link">
                 <i class="fa fa-chevron-up"></i>
@@ -46,8 +46,6 @@
                 <tr>
                     <th>#</th>
                     <th>Nome</th>
-                    <th>Descrizione</th>
-                    <th>Immagine</th>
                     <th>Azione</th>
                 </tr>
                 </thead>
@@ -59,12 +57,6 @@
                         </td>
                         <td>
                             {{featurevalue.title}}
-                        </td>
-                        <td>
-                            {{featurevalue.link}}
-                        </td>
-                        <td>
-                            {{featurevalue.img}}
                         </td>
                         <td>
                             <a href="/featurevalues/update/{{featurevalue.idTblCatalogueFeaturevalue}}" title="Modifica"><i class="fa fa-edit"></i></a>
