--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallproduct.html.twig
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallproduct.html.twig
@@ -8,25 +8,30 @@
 {% endblock %}
 
 {% block pagetitle %}
-    <div class="row wrapper border-bottom white-bg page-heading">
-        <div class="col-sm-4">
-            <h2>Lista Prodotti</h2>
-            <ol class="breadcrumb">
-                <li>
-                    <a href="/">Dashboard</a>
-                </li>
-                <li class="active">
-                    <strong>Prodotti</strong>
-                </li>
-            </ol>
-        </div>
+<div class="row wrapper border-bottom white-bg page-heading">
+    <div class="col-sm-4">
+        <h2>Lista Prodotti</h2>
+        <ol class="breadcrumb">
+            <li>
+                <a href="/">Dashboard</a>
+            </li>
+            <li class="active">
+                <strong>Prodotti</strong>
+            </li>
+        </ol>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
+    <div class="container">
+        {{ dump(pagination) }}
+
+    </div>
 <div class="ibox float-e-margins">
     <div class="ibox-title">
         <h5>Prodotti</h5>
+        {#<span>{{ pagination.getTotalItemCount }} prodotti totali</span>#}
         <div class="ibox-tools">
             <a class="btn btn-primary btn-xs" href="{{ path('create_product') }}">Crea nuovo Prodotto</a>
             <a class="collapse-link">
@@ -42,35 +47,39 @@
     </div>
     <div class="ibox-content">
         <div class="table-responsive">
-            <table class="table table-striped" >
+            <table class="table table-striped table-bordered table-hover dataTables">
                 <thead>
                 <tr>
-                    <th>#</th>
-                    <th>Nome Prodotto</th>
-                    <th>Descrizione</th>
+                    {# sorting of properties based on query components #}
+                    <th>{{ knp_pagination_sortable(pagination, '#', 'a.idTblCatalogueProduct') }}</th>
+                    <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Prodotto', 'a.title') }}</th>
+                    <th>{{ knp_pagination_sortable(pagination, 'Descrizione', 'a.shortDescription') }}</th>
+                    <th>{{ knp_pagination_sortable(pagination, 'Codice', 'a.cod') }}</th>
                     <th>Azioni</th>
                 </tr>
                 </thead>
                 <tbody>
-                    {% for product in products %}
-                    <tr>
-                        <td>
-                            {{product.idTblCatalogueProduct}}
-                        </td>
-                        <td>
-                            {{product.title}}
-                        </td>
-                        <td>
-                            {{product.shortDescription}}
-                        </td>
+                {# table body #}
+                {{ knp_pagination_filter(pagination, {'product.title': 'Nome Prodotto', 'product.shortDescription': 'Descrizione'}) }}
+                {% for product in pagination %}
+                    <tr {% if loop.index is odd %}class="color"{% endif %}>
+
+                        <td>{{ product.id }}</td>
+                        <td>{{ product.title }}</td>
+                        <td>{{ product.shortDescription }}</td>
+                        <td>{{ product.cod }}</td>
                         <td>
                             <a href="/product/update/{{product.idTblCatalogueProduct}}" title="Modifica"><i class="fa fa-edit"></i></a>
                             <a href="/product/delete/{{product.idTblCatalogueProduct}}" title="Elimina"><i class="fa fa-times"></i></a>
                         </td>
                     </tr>
-                    {% endfor %}
+                {% endfor %}
                 </tbody>
             </table>
+            {# display navigation #}
+            <div class="navigation">
+                {{ knp_pagination_render(pagination) }}
+            </div>
         </div>
     </div>
 </div>
