Salvataggio immagini prodotto all'interno del percorso web/uplaod/gallery

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallproduct.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallproduct.html.twig
@@ -24,10 +24,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    {#<div class="container">
         {{ dump(pagination) }}
-
-    </div>
+    </div>#}
 <div class="ibox float-e-margins">
     <div class="ibox-title">
         <h5>Prodotti</h5>
