--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/new.html.twig
@@ -106,6 +106,10 @@
                                         <div class="dropzone-previews"></div>
                                         <button type="submit" class="btn btn-primary pull-right save_image">Salva Immagini</button>
                                     </div>
+                                    <div class="col-md-12">
+                                        {{ form_label(form.saveAndExit, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
+                                        {{ form_widget(form.saveAndExit, {'attr': {'class': 'btn btn-primary'}}) }}
+                                    </div>
                                 </div>
                             </div>
                         </div>
