Inserita visualizzazione immagini in modifica prodotto

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/index.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/index.html.twig
@@ -131,6 +131,7 @@
                     <thead>
                     <tr>
                         <th>#</th>
+                        <th>Codice</th>
                         <th>Nome Prodotto</th>
                         <th>Descrizione</th>
                         <th>Azioni</th>
@@ -141,6 +142,9 @@
                         <tr>
                             <td>
                                 {{product.idTblCatalogueProduct}}
+                            </td>
+                            <td>
+                                {{product.cod}}
                             </td>
                             <td>
                                 {{product.title}}
