--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/update.html.twig
@@ -6,6 +6,7 @@
 {% block stylesheets %}
     <link href="{{ asset('admin-style/css/plugins/summernote/summernote.css') }}" rel="stylesheet">
     <link href="{{ asset('admin-style/css/plugins/summernote/summernote-bs3.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/css/html5imageupload.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -28,6 +29,7 @@
                 <ul class="nav nav-tabs">
                     <li class="active"><a data-toggle="tab" href="#tab-1">Informazioni Prodotto</a></li>
                     <li class=""><a data-toggle="tab" href="#tab-4">Images</a></li>
+                    <li class=""><a data-toggle="tab" href="#tab-5">HTML5 IMAGE UPLOAD</a></li>
                 </ul>
                 <div class="tab-content">
 
@@ -123,7 +125,7 @@
                                         {% for immagine in immagini %}
                                             <tr>
                                                 <td>
-                                                    <img class="img-responsive" src="{{ asset(immagine.img) | imagine_filter('img_preview')}}" class="img-responsive" />
+                                                    <img class="img-responsive" src="{{ asset(immagine.img) | imagine_filter('img_preview')}}" />
                                                 </td>
                                                 <td>
                                                     {{ immagine.img }}
@@ -143,6 +145,15 @@
                         </div>
                     </div>
 
+                    <div id="tab-5" class="tab-pane">
+                        <div class="panel-body">
+                            <div class="col-md-12">
+                                <div class="html5imageupload" data-originalsave="true" data-width="960" data-height="540" data-url="{{ path('upload_product_photo') }}" data-resize="true">
+                                    <input type="file" name="thumb" required="required" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-md-12">
                         {{ form_label(form.save, label|default(null) ,{'label_attr': {'class': 'control-label col-sm-12'}}) }}
                         {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
@@ -169,6 +180,9 @@
 
     <!-- DROPZONE -->
     <script src="{{ asset('admin-style/js/plugins/dropzone/dropzone.js') }}"></script>
+
+    <!-- HTML5 IMAGE UPLOAD -->
+    <script src="{{ asset('assets/js/html5imageupload.js') }}"></script>
 
     <script>
         $(document).ready(function(){
@@ -208,6 +222,9 @@
 
             }
 
+            $('.html5imageupload').html5imageupload({data: {id_album: '{{ product.idTblPhotoCat }}', id_prodotto: '{{ product.idTblCatalogueProduct }}'}});
+
         });
     </script>
+
 {% endblock %}
